latest changes content / small bug fixes / Added top scrollbar to raw data / swapped content and sessions tables

--- a/v3/assets/css/sections.css
+++ b/v3/assets/css/sections.css
@@ -1471,9 +1471,9 @@ section.main-form form .thankyou img{
     width: 50%;
     margin:40px 0px;
 }
-
-
-
+section.main-form .wrap form .half button{
+    margin-top:0px;
+}
 /* ========================
           PRICING FORM
    ======================== */
@@ -2426,6 +2426,14 @@ section.data-set .box-shadow .full{
     padding-bottom:20px;
 }
 
+section.data-set .box-shadow .full:first-of-type{
+    margin-bottom:20px;
+    padding-bottom:0px;
+}
+section.data-set .box-shadow .top-scrollbar{
+    overflow-x:scroll;
+    height: 1px;
+}
 .data-set-bg{
     width: 100%;
     padding:40px;
@@ -2451,19 +2459,19 @@ section.no-bg{
     padding:0px 40px;
 }
 
-section.data-set .box-shadow .full::-webkit-scrollbar-track, .explore-v3 .modal-body::-webkit-scrollbar-track{
+section.data-set .box-shadow .full::-webkit-scrollbar-track{
     -webkit-box-shadow: inset 0 1px 4px 0 rgba(0,0,0,0.13);
     background-color: #ffffff;
     border-radius: 9px 0px 0px 9px;
 }
 
-section.data-set .box-shadow .full::-webkit-scrollbar, .explore-v3 .modal-body::-webkit-scrollbar{
+section.data-set .box-shadow .full::-webkit-scrollbar{
     width: 2px;
     background-color: #ffffff;
     border-radius: 9px 0px 0px 9px;
 }
 
-section.data-set .box-shadow .full::-webkit-scrollbar-thumb, .explore-v3 .modal-body::-webkit-scrollbar-thumb{
+section.data-set .box-shadow .full::-webkit-scrollbar-thumb{
     background-color: #64BBE4;
     border-radius: 9px;
 }
